welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:26: error: '(' expected but identifier found.
for i <- 1 to 8 {
    ^PictureMono:31: error: illegal start of simple expression
}
^